fix[SMW-226]: add moderation scrolbar padding, use already defined scrollbar class

--- a/src/app/backoffice/pages/Moderation/styles.scss
+++ b/src/app/backoffice/pages/Moderation/styles.scss
@@ -1,26 +1,13 @@
 .media-cards {
-  transition: color 0.4s;
-  transition-delay: 0.5s;
-  scrollbar-color: red;
-  background: #fff no-repeat;
+  &__outer {
+    padding: 20px 8px 0 22px;
+    background: #fff no-repeat;
 
-  box-shadow: inset 0 12px 9px -12px rgba(0, 0, 0, 0.2),
-    inset 0 -12px 9px -12px rgba(0, 0, 0, 0.2);
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    box-shadow: inset 0 12px 9px -12px rgba(0, 0, 0, 0.2),
+      inset 0 -12px 9px -12px rgba(0, 0, 0, 0.2);
   }
 
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-  &::-webkit-scrollbar-thumb {
-    border-radius: 13px;
-    background: #cdd3e0;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background: #b3b9c9;
+  &__inner {
+    padding-right: 6px;
   }
 }
